Kleopatra: Crashes on deleting circular certificate chains
Closed, ResolvedPublic

Assigned To
Authored By
ebo
Jul 20 2023, 9:20 AM
Tags

Description

This is a follow up of T5697. While viewing circular certificates works, deleting them reliably causes a crash of Kleopatra.

How to reproduce:
Take the test certificates from rGc9343bec83e2c2a14b564b8a13998806eab1ae9f and import them in Kleopatra.
Right-click on one of them -> delete
Kleopatra will crash after a second or so. Starting it again shows that the certificates are still there.

Details

Version
gpg4win 4.2.0

Event Timeline

ikloecker moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.
ikloecker changed the task status from Open to Testing.Dec 5 2023, 9:08 AM

Fixed.

ebo moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.Oct 1 2024, 3:55 PM
ebo moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.EditedOct 1 2024, 4:24 PM

Deletion works, tested with gpg4win-Beta-50.

But the certificate and it's Root CA are shown in the list until you hit F5.
But this has nothing to do with the fact that it is a circular certificate, its the same for normal ones.

TobiasFella moved this task from QA to vsd-3.3.0 on the vsd33 board.
TobiasFella edited projects, added vsd33 (vsd-3.3.0); removed vsd33.