Prevent infinite recursion when listing subjects of certificates

Use a loop instead of (potentially infinite) recursion to collect indirect
subjects. We still recurse once but only to get the next batch of
immediate subjects. To prevent infinite looping on cyclic certificate
chains we break the loop if no new subjects were found in an iteration.

GnuPG-bug-id: 6602